--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.8.4",
     "dompurify": "^3.2.5",
     "nanoid": "^5.1.5",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
+    "sweetalert2": "^11.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
