--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "dompurify": "^3.2.5",
+    "lucide-react": "^0.510.0",
     "nanoid": "^5.1.5",
     "qs": "^6.14.0",
     "react": "^19.1.0",
