--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "dompurify": "^3.2.5",
+    "firebase": "^11.8.1",
     "lucide-react": "^0.510.0",
     "nanoid": "^5.1.5",
     "qs": "^6.14.0",
